# django-cardinality-esitmation

./: README.md  django-cardinality-estimation.session.sql  manage.py  models.py  pyproject.toml
django_cardinality_estimation/: asgi.py  settings.py  urls.py  wsgi.py
estimation/: apps.py  estimation.py  models.py  query_wrapper_utils.py
estimation/migrations/: 0001_initial.py  0002_delete_authgroup_delete_authgrouppermissions_and_more.py  0003_delete_authgroup_delete_authgrouppermissions_and_more.py  0004_rename_kind_id_akatitle_kind_and_more.py
